ie_um/src/main/java/com/example/ie_um/global/error/exception/BusinessException.java
package com.example.ie_um.global.error.exception;

public abstract class BusinessException extends RuntimeException {
    public BusinessException(String message) {
        super(message);
    }
}
